--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,9 @@
     <string name="oab_code">Código OAB</string>
     <string name="select_uf_oab">Selecione a UF de seu OAB</string>
     <string name="enter_oab">Digite seu OAB</string>
+    <string name="how_about_a_picture">Que tal uma foto?</string>
+    <string name="how_about_msg">Escolha uma imagem de sua galeria para que os outros usuários possam saber quem você é.</string>
+    <string name="accept_permission">Por favor, aceite as permissões para escolher sua imagem</string>
+    <string name="soon">Em Breve!</string>
+    <string name="chose_image_continue">Escolha uma imagem para continuar</string>
 </resources>
