--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -65,4 +65,17 @@
     <string name="accept_permission">Please accept the permissions to choose your image</string>
     <string name="soon">Soon!</string>
     <string name="chose_image_continue">Choose an image to continue</string>
+    <string name="about_description">The Advogado Responde application has the objective of connecting people with problems to lawyers specialized in the area, with the intention of finding a solution.</string>
+    <string name="contact">Contact</string>
+    <string name="conect_with_us">Connect with Us</string>
+    <string name="version">Version</string>
+    <string name="developed">Development</string>
+    <string name="about">About</string>
+    <string name="profile">Profile</string>
+    <string name="verified">Verified</string>
+    <string name="not_verified">Not verified</string>
+    <string name="profile_pic_updated">Profile photo updated successfully!</string>
+    <string name="answered_questions">Answered questions</string>
+    <string name="questions_taken">Questions Taken</string>
+    <string name="talk_whats">Talk to us at WhatsApp</string>
 </resources>
