--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -78,4 +78,13 @@
     <string name="answered_questions">Answered questions</string>
     <string name="questions_taken">Questions Taken</string>
     <string name="talk_whats">Talk to us at WhatsApp</string>
+    <string name="sign_up_lawyer_crecits">You are receiving 70CA (Application Credits) for signing up for our beta.</string>
+    <string name="phone">Phone</string>
+    <string name="phone_msg">This number should be that of your WhatsApp</string>
+    <string name="change_phone">Click here to change your phone.</string>
+    <string name="save">Save</string>
+    <string name="example_phone">E.g: 51999990000</string>
+    <string name="phone_updated">Your number was updated successfully!</string>
+    <string name="incomplet_phone">Your number is incomplete.</string>
+    <string name="fill_phone">You need to enter your number.</string>
 </resources>
