--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,6 @@
     <string name="questions_taken">Perguntas Realizadas</string>
     <string name="talk_whats">Fale com nós pelo WhatsApp</string>
     <string name="sign_up_lawyer_crecits">Você está recebendo 70CA (Creditos do aplicativo), por se cadastrar em nosso beta.</string>
-    <string name="phone">Telefone</string>
     <string name="phone_msg">Este número deve ser o de seu WhatsApp</string>
     <string name="change_phone">Clique aqui para alterar seu telefone.</string>
     <string name="save">Salvar</string>
@@ -86,5 +85,9 @@
     <string name="phone_updated">Seu número foi atualizado com sucesso!</string>
     <string name="incomplet_phone">Seu numero esta incompleto</string>
     <string name="fill_phone">Você precisa digitar seu numero</string>
+    <string name="oab" translatable="false">OAB</string>
+    <string name="phone">Telefone</string>
+    <string name="name_lastname">Nome e Sobrenome</string>
+    <string name="update_name_last_name">Atualize seu nome e sobrenome</string>
 
 </resources>
