--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -130,4 +130,8 @@
     <string name="user_case">User Case</string>
     <string name="click_to_view">Click here to view</string>
     <string name="no_file">No FIle</string>
+    <string name="get_case">Catch this case</string>
+    <string name="get_case_msg">You will spend 30CA to get this case!</string>
+    <string name="insufficient_ca">CA not enough to get this case, please recharge your CA and try again</string>
+    <string name="report">Report this case</string>
 </resources>
